deploy/manifests/ingress/dev/gnomad.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnomad-ingress
  labels:
    tier: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ourdna-browser-dev
    networking.gke.io/managed-certificates: ourdna-browser-dev
    networking.gke.io/v1beta1.FrontendConfig: 'gnomad-frontend-config'
spec:
  rules:
    - host: ourdna-dev.popgen.rocks
      http:
        paths:
          # Do not have READS at this stge
          # - backend:
          #     service:
          #       name: reads-bluegreen-active-dev
          #       port:
          #         number: 80
          #   path: /reads
          #   pathType: ImplementationSpecific
          # - backend:
          #     service:
          #       name: reads-bluegreen-active-dev
          #       port:
          #         number: 80
          #   path: /reads/*
          #   pathType: ImplementationSpecific
          # - backend:
          #     service:
          #       name: reads-bluegreen-preview-dev
          #       port:
          #         number: 80
          #   path: /preview-reads
          #   pathType: ImplementationSpecific
          # - backend:
          #     service:
          #       name: reads-bluegreen-preview-dev
          #       port:
          #         number: 80
          #   path: /preview-reads/*
          #   pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /blog/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-blog
                port:
                  number: 80
            path: /news/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: gnomad-browser
                port:
                  number: 80
            pathType: ImplementationSpecific
